<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:layout_gravity="center"
    tools:context=".ResocontoViaggioNelTempoVerbiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txtVittoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_italic"
            android:text="@string/txtVinto"
            android:textColor="#FBE207"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/gifImageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/sconfitta"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline18"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPunti"
            android:textStyle="bold"
            android:textColor="#FDFCFC"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/txtPunti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/txtScriviPunti"
            android:textColor="#84F106"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtErrori"
            android:textStyle="bold"
            android:textColor="#FDFCFC"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/txtErrori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/txtScriviErrori"
            android:textColor="#F41202"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/lettere"
        android:fontFamily="monospace"
        android:text="@string/btnRigioca"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        app:layout_constraintVertical_bias="0.45" />
</LinearLayout>